2011-08-31  Peter Bloomfield

	* libbalsa/misc.c (libbalsa_text_attr_file): use GFile methods.
	* src/sendmsg-window.c (sw_set_charset): check for error return.

2011-08-30  Peter Bloomfield

	* src/main-window.c: call gtk_container_resize_children after
	adding the notebook page for a newly opened mailbox; should not
	be necessary, but seems to fix
	<URL:http://mail.gnome.org/archives/balsa-list/2011-August/msg00017.html>.

2011-08-30  Peter Bloomfield

	* configure.in: webkit can be used with threads disabled if glib
	version is 2.24 or later.

2011-08-29  Pawel Salek

	* libbalsa/filter-funcs.c: implement libbalsa_condition_to_string_user
	* libbalsa/filter.h: add libbalsa_condition_to_string_user() proto.
	* src/filter-edit-callbacks.c: use it to provide more user-friendly
	filter view.

2011-08-28  Peter Bloomfield

	* src/main-window.c: when network connection is reestablished,
	check mail if elapsed time since last check exceeds mail check
	interval.
	* src/main-window.h: new member last_check_time.

2011-08-28  Peter Bloomfield

	* libbalsa/body.c (libbalsa_message_body_get_pixbuf): check for
	error before closing loader.
	* src/balsa-print-object-image.c (balsa_print_object_image): use
	g_message instead of g_warning for image format error.

2011-08-26  Peter Bloomfield

	Make BalsaMimeWidgetImage a subclass of BalsaMimeWidget

	* src/balsa-mime-widget-image.h: subclass boilerplate.
	* src/balsa-mime-widget-image.c (balsa_mime_widget_image_init),
	(balsa_mime_widget_image_class_init): ditto.
	(balsa_mime_widget_image_dispose): disconnect signal handler.
	(balsa_mime_widget_new_image): store signal handler id.

2011-08-21  Peter Bloomfield

	* libbalsa/libbalsa-vfs.c (libbalsa_vfs_get_size): get size as
	guint64.
	* libbalsa/libbalsa-vfs.h: ditto.
	* src/sendmsg-window.c (add_attachment), (add_urlref_attachment),
	(create_info_pane): ditto;
	(render_attach_size): use g_format_size() instead of deprecated
	g_format_size_for_display().
